# conv-texpy

./: .gitignore  LICENSE  Makefile  README.rst  mypy.ini  pyproject.toml  setup.py
docs/: Makefile  conf.py  index.rst  texpy.aggregators.rst  texpy.experiment.rst  texpy.metrics.rst
example/: README.rst  config.yaml  index.html  task.py  task.yaml
stubs/tqdm/: __init__.pyi
texpy/: __init__.py  aggregators.py  botox.py  commands.py  experiment.py  main.py  metrics.py  quality_control.py  server.py  util.py
texpy/templates/: config.yaml  index.html  inputs.jsonl  task.py  task.yaml
texpy/viewer/: texpy.js  view.html
