[tool.poetry]
name = "texpy"
version = "0.1.1"
description = "Python-based tool to manage Amazon Mechanical Turk experiments"
authors = ["Arun Tejasvi Chaganty <chaganty@cs.stanford.edu>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/arunchaganty/texpy"
homepage = "https://github.com/arunchaganty/texpy"

[tool.poetry.dependencies]
python = "^3.7"
toml = "^0.9"
boto3 = "^1.9"
jinja2 = "^2.10"
boto = "^2.49" 
tqdm = "^4.32"
bottle = "^0.12"
pyyaml = "^5.1"
numpy = "^1.17"
scipy = "^1.3"
sphinx = "^2.4.4"
readthedocs-sphinx-ext = "^1.0.1"
sphinx_rtd_theme = "^0.4.3"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-cov = "^2.4"
mypy = "^0.720.0"

[tool.poetry.scripts]
texpy = 'texpy.main:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[extras]
